# nccc-integ

./: .gitmodules  CMakeLists.txt
proj/duktape/: CMakeLists.txt  duk-srcs.cmake
